--- a/api/package.json
+++ b/api/package.json
@@ -8,9 +8,8 @@
     "dev": "nodemon index.js"
   },
   "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^2.0.6"
+    "express": "*",
+    "nodemon": "*"
   }
 }
