--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,6 @@
+# 개발용
 version: "3.8"
 services:
-  # nginx:
-  #   restart: always
-  #   build:
-  #     context: ./nginx
-  #   ports:
-  #     - "80:80"
   api:
     build:
         context: ./api
@@ -17,10 +12,3 @@ services:
       - ./api/dev.env
     ports:
       - "5000:5000"
-  # client:
-  #   build:
-  #     context: ./client
-  #     dockerfile: Dockerfile.dev
-  #   volumes:
-  #     - /app/node_modules
-  #     - ./client:/app
