--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -9,3 +9,12 @@ services:
       - ./api:/app
     ports:
       - "5000:5000"
+  auth:
+    image: 382707088245.dkr.ecr.ap-northeast-2.amazonaws.com/test-auth
+    build:
+        context: ./auth
+    volumes:
+      - /app/node_modules
+      - ./api:/auth
+    ports:
+      - "5000:5000"
