--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,5 +1,12 @@
 version: "3.8"
 services:
+  nginx:
+    image: 382707088245.dkr.ecr.ap-northeast-2.amazonaws.com/test-nginx
+    restart: always
+    build:
+      context: ./nginx
+    ports:
+      - "80:80"
   api:
     image: 382707088245.dkr.ecr.ap-northeast-2.amazonaws.com/test-api
     build:
@@ -17,4 +24,4 @@ services:
       - /app/node_modules
       - ./auth:/auth
     ports:
-      - "5000:5000"
+      - "3000:3000"
